crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@neg-i128.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: -19\nType: I128"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "-19",
        extra: (),
    },
    I128(
        -19,
    ),
)
