crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@pos-i16.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: 19\nType: I16"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "19",
        extra: (),
    },
    I16(
        19,
    ),
)
