crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@pos-i8.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: 19\nType: I8"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "19",
        extra: (),
    },
    I8(
        19,
    ),
)
